# SCarterEngine

./: .clang-format  .gitignore  Application.cpp  Application.h  CMakeLists.txt  GLConfigUtil.h  GLConfigUtil.hpp  Gui.cpp  Gui.h  Gui.hpp  IKArm.cpp  IKArm.hpp  IKLine.cpp  IKLine.hpp  Makefile  README  README.md  SCarterEngine.data  SCarterEngine.html  SCarterEngine.js  SCarterEngine.wasm  SceneGears.cpp  SceneGears.hpp  SimpleScene.cpp  SimpleScene.h  index.html  interpolation.hpp  main.cc  main.cpp  main.lua  math3d.h  math3d.hpp  opaque.vert  scarter_engine.glade
GL1_Primitives/: GL1_Cube.cpp  GL1_Cube.hpp  GL1_Sphere.cpp  GL1_Sphere.hpp
GameStates/: CubicGameState.cpp  CubicGameState.hpp
Scenes/: SceneBase.cpp  SceneBase.hpp  SceneCubicContainer.cpp  SceneCubicContainer.hpp  SceneGears.cpp  SceneGears.hpp  SceneIK.cpp  SceneIK.hpp  SceneMD5.cpp  SceneMD5.hpp  SceneMorph.cpp  SceneMorph.hpp  SceneParticleBase.cpp  SceneParticleBase.hpp  SceneParticleFirework.cpp  SceneParticleFirework.hpp  SceneParticleFountain.cpp  SceneParticleFountain.hpp  SceneParticleRepelant.cpp  SceneParticleRepelant.hpp  SceneParticleSmoke.cpp  SceneParticleSmoke.hpp
include/: Camera.h  Debug.h  Engine.h  Game.h  Input.h  Logging.h  Mesh.h  Rendering.h  Scene.h  Scripting.h
md5/: Joint.cpp  Joint.hpp  JointFrame.cpp  JointFrame.hpp  Md5.cpp  Md5.hpp  Md5Exceptions.hpp  Md5Frame.cpp  Md5Frame.hpp  Mesh.cpp  Mesh.hpp  Quaternion.cpp  Quaternion.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp  Weight.cpp  Weight.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: Debug.cc  Engine.cc  Game.cc  Input.cc  Logging.cc  Rendering.cc  Scripting.cc
src/private/: Manager.h
src/private/Camera/: CameraImpl.cc  CameraImpl.h
src/private/Command/: Command.h  ReusableCommandQueue.cc  ReusableCommandQueue.h
src/private/Engine/: EngineManager.cc  EngineManager.h
src/private/Game/: GameManager.cc  GameManager.h
src/private/Input/: InputManager.cc  InputManager.h
src/private/Logging/: LoggingManager.cc  LoggingManager.h
src/private/Rendering/: RenderingManager.cc  RenderingManager.h
src/private/Rendering/GLES/: CommandQueueGles.h  RenderingManagerGles.cc  RenderingManagerGles.h
src/private/Rendering/Vulkan/: RenderingManagerVulkan.cc  RenderingManagerVulkan.h  opaque.frag  opaque.vert
src/private/Scene/: SceneImpl.cc  SceneImpl.h
src/private/Scripting/: FunctionTables.h  ScriptingManager.cc  ScriptingManager.h  ScriptingUtils.h
tests/: ScriptingTest.run_file.lua  command.cc  debug.cc  game.cc  logging.cc  rendering.cc  scripting.cc  scripting_function_tables.cc
